--- a/main.css
+++ b/main.css
@@ -7,6 +7,18 @@ body {
   background-color: #242F3F;
 }
 
+.loader-wrapper{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color:#242f3f;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .loader {
   display: inline-block;
   width: 30px;
